FAQ links working, and sprinkled into every page. Header and Subheader work in mobile and desktop, made improvements to lightbox to make it more responsive

--- a/src/components/common/minihero/minihero.scss
+++ b/src/components/common/minihero/minihero.scss
@@ -16,7 +16,6 @@
   p {
     font-size: 1.1em;
   }
-
 }
 
 .mini-hero {
@@ -24,8 +23,10 @@
   max-width: $narrow-width;
   color: $white;
   text-align: center;
+}
 
-
+.mini-spacer {
+  margin-top: $subheader-height;
 }
 
 .mini-hero .fast-fact-wrapper{
