--- a/src/components/main/testimonial/testimonial.scss
+++ b/src/components/main/testimonial/testimonial.scss
@@ -20,7 +20,7 @@
 .testimonial img {
   border-radius: 90px;
   filter: grayscale(0.4);
-  border-color: grey;
+  border-color: $voltera-blue;
   border-style: solid;
   border-width: 3px;
   margin-left: $medium-padding;
