--- a/src/components/gallery/lightbox/lightbox.scss
+++ b/src/components/gallery/lightbox/lightbox.scss
@@ -3,22 +3,20 @@
 .lightbox {
 background-color: rgba(0, 0, 0, 0.95);
 position: fixed;
-top: $header-height;
+top: $header-height + 35px;
 left: 0px;
-width: 100vw;
-height: calc(100vh - 75px);
-z-index: 1;
-}
+width: 100%;
+height: calc(100vh - 75px - 35px);
 
-.lightbox-wrapper {
-  color: $white;
-  width: calc(100%);
-  height: calc(100%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  box-sizing: border-box;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: $small-padding $small-padding;
+box-sizing: border-box;
+
+z-index: 1;
+
+color: $white;
 }
 
 .lightbox-content {
@@ -28,6 +26,7 @@ z-index: 1;
   flex-direction: column;
   max-width: 800px;
   //max-height: 800px;
+  z-index: 2;
 }
 
 .lightbox img {
@@ -41,6 +40,7 @@ z-index: 1;
 }
 .lightbox p {
   margin-top: 0px;
+  width: 100%;
 }
 
 .no-lightbox img {
