--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -14,6 +14,7 @@ $form-width: 550px;
 $max-width: 1200px;
 $narrow-width: 1100px;
 $header-height: 75px;
+$subheader-height: 38px;
 
 // Section paddings
 $small-padding: 20px; // How close items can get to the edge.
