paste content removed for demo purposes

--- a/src/components/common/minihero/minihero.scss
+++ b/src/components/common/minihero/minihero.scss
@@ -4,6 +4,7 @@
 .mini-hero-wrapper {
   background-color: $medium-grey;
   min-height: 400px;
+  width: 100%;
   padding: 0px $small-padding;
 
   display: flex;
