--- a/src/components/common/minihero/minihero.scss
+++ b/src/components/common/minihero/minihero.scss
@@ -3,12 +3,12 @@
 
 .mini-hero-wrapper {
   background-color: $medium-grey;
-  min-height: 400px;
-  width: 100%;
+  height: 400px;
   padding: 0px $small-padding;
 
   display: flex;
-  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
 
   h1 {
     color: $white;
