Added payment question to FAQ, updated renderings for probe, whats in the box, and syringes. buy now button now has price. gallery snippets have a source now

--- a/src/components/common/button/button.scss
+++ b/src/components/common/button/button.scss
@@ -8,6 +8,7 @@
 // If you want a light background
 .button.light {
   background-color: $voltera-green;
+  color: $voltera-blue;
 }
 
 .button.white {
