--- a/src/components/product/box/box.scss
+++ b/src/components/product/box/box.scss
@@ -2,42 +2,26 @@
 
 .box-wrapper {
   padding: $large-padding $small-padding;
-}
-.box {
-  margin: auto;
-  max-width: $max-width;
-}
 
-.box h2 {
-  text-align: left;
+  h2 {
+    text-align: left;
+  }
 }
 
-.box .box-content {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-between;
+.box-wrapper .mobile-contents p {
+  line-height: 1.4em;
 }
 
-.box .description {
-  padding: 0px $medium-padding;
-  flex-basis: 500px;
-  flex-grow: 1;
-  flex-shrink: 1;
-}
-
-
-.box .in-the-box {
-  background-image: url('/v-one-in-box-small.png');
+.in-the-box {
+  background-image: url('/v-one-box.png');
   background-position: bottom;
   width: 600px;
   height: 400px;
   position: relative;
-  transition: all $t-time ease-in-out 0s;
   flex-shrink: 0;
 }
 
-.box .outline {
+.in-the-box .outline {
   opacity: 0;
   cursor: pointer;
   background-repeat: no-repeat;
@@ -45,98 +29,97 @@
   position: absolute;
 }
 
-.box .visible {
+.in-the-box .visible {
   opacity: 1;
 }
 
-.box  .outline:hover {
+.in-the-box  .outline:hover {
   opacity: 1;
 }
 
-.box .v-one {
+.in-the-box .v-one {
   background-image: url('./v-one.min.svg');
-  top: 45px;
-  left: 90px;
-  width: 495px;
-  height: 305px;
+  top: 42px;
+  left: 86px;
+  width: 473px;
+  height: 287px;
 }
 
-.box .burnishing-pad {
+.in-the-box .burnishing-pad {
   background-image: url('./burnishing-pad.min.svg');
-  left: 133px;
-  top: 236px;
-  width: 105px;
-  height: 96px;
+  left: 127px;
+  top: 225px;
+  width: 99px;
+  height: 89px;
 }
 
-.box .nozzles {
+.in-the-box .nozzles {
   background-image: url('./nozzles.min.svg');
-  left: 247px;
-  top: 297px;
-  width: 128px;
-  height: 82px;
+  left: 234px;
+  top: 279px;
+  width: 119px;
+  height: 77px;
 }
 
-.box .solder-wire {
+.in-the-box .solder-wire {
   background-image: url('./solder-wire.min.svg');
-  left: 390px;
-  top: 362px;
-  width: 33px;
-  height: 27px;
+  left: 366px;
+  top: 341px;
+  width: 31px;
+  height: 24px;
 }
 
-.box .substrates {
+.in-the-box .substrates {
   background-image: url('./substrates.min.svg');
-  top: 297px;
-  left: 56px;
-  width: 164px;
-  height: 75px;
+  top: 281px;
+  left: 53px;
+  width: 157px;
+  height: 68px;
 }
 
-.box .dispenser-ink {
+.in-the-box .dispenser-ink {
   background-image: url('./dispenser-ink.min.svg');
-  left: 356px;
-  top: 204px;
-  width: 57px;
-  height: 162px;
+  top: 193px;
+  left: 336px;
+  width: 53px;
+  height: 153px;
 }
-
-.box .dispenser-paste {
+.in-the-box .dispenser-paste {
   background-image: url('./dispenser-paste.min.svg');
-  left: 251px;
-  top: 191px;
-  width: 51px;
-  height: 152px;
+  left: 236px;
+  top: 180px;
+  width: 53px;
+  height: 153px;
 }
 
-.box .cartridge-paste {
+.in-the-box .cartridge-paste {
   background-image: url('./cartridge-paste.min.svg');
-  top: 249px;
-  left: 294px;
-  width: 39px;
-  height: 101px;
+  top: 235px;
+  left: 278px;
+  width: 36px;
+  height: 95px;
 }
 
-.box .cartridge-ink {
+.in-the-box .cartridge-ink {
   background-image: url('./cartridge-ink.min.svg');
-  top: 267px;
-  left: 403px;
-  width: 42px;
-  height: 108px;
-}
-
-.box .probe {
-  background-image: url('./probe.min.svg');
-  top: 92px;
-  left: 327px;
-  width: 37px;
+  top: 251px;
+  left: 381px;
+  width: 38px;
   height: 101px;
 }
 
-.box .clamps {
+.in-the-box .probe {
+  background-image: url('./probe.min.svg');
+  top: 87px;
+  left: 314px;
+  width: 36px;
+  height: 98px;
+}
+
+.in-the-box .clamps {
   background-image: url('./clamps.min.svg');
-  top: 198px;
-  left: 307px;
-  width: 198px;
-  height: 60px;
+  top: 188px;
+  left: 292px;
+  width: 190px;
+  height: 59px;
 }
