About page image renders in mobile. Migrated to bowser for mobile detection. Active product link in mobile header is highlighted. Adjusted tech specs spacing for better mobile rendering. Added software gallery as youtube links. Fixed reservation page mobile rendering.

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -3,5 +3,12 @@
 .about-image {
   background-image: url('/v-one-assembly.jpg');
   background-position: center;
+  background-size: cover;
   height: 500px;
+}
+
+@media (max-width: $mobile-threshold) {
+  .about-image {
+    height: 200px;
+  }
 }
