--- a/src/components/common/header/mobile.scss
+++ b/src/components/common/header/mobile.scss
@@ -52,7 +52,7 @@
   margin: 10px $small-padding;
 }
 
-.header-mobile a:hover{
+.header-mobile a:hover, .header-mobile .selected{
   color: $voltera-green;
 }
 
