--- a/src/components/gallery/lightbox/lightbox.scss
+++ b/src/components/gallery/lightbox/lightbox.scss
@@ -3,10 +3,10 @@
 .lightbox {
 background-color: rgba(0, 0, 0, 0.95);
 position: fixed;
-top: $header-height + 35px;
+top: $header-height;
 left: 0px;
 width: 100%;
-height: calc(100vh - 75px - 35px);
+height: calc(100vh - 75px);
 
 display: flex;
 justify-content: center;
@@ -33,7 +33,7 @@ color: $white;
   max-width: 100%;
 }
 
-.lightbox h1 {
+.lightbox h2 {
   color: $white;
   text-align: left;
   width: 100%;
