Google Analytics tag working, Gallery is now a common component, remarketing tag appears to be working, layout has helmet setup, pages have helmet title and description

--- a/src/components/request/common.scss
+++ b/src/components/request/common.scss
@@ -10,7 +10,7 @@
 }
 
 .request-wrapper {
-  max-width: $form-width;
+  width: $form-width;
   padding: $small-padding $medium-padding;
   background-color: $white;
   border-radius: 10px;
