fast facts buttons smaller. thank you page exists. buyNow merged with CTA. CTA supports 2 buttons. Change spec units in mobile better. Fix youtube issue with size. blog removed from mobile header. product link immediately redirects. Redirects file POC

--- a/src/components/common/cta/cta.scss
+++ b/src/components/common/cta/cta.scss
@@ -6,10 +6,25 @@ padding: $medium-padding $small-padding;
 }
 
 .cta h2 {
-  margin-bottom: 0px;
+  margin: 0px;
 }
 
 .cta p {
-  margin-top: 0px;
+  margin: 0px;
   font-size: 1.3em;
+}
+
+.cta .buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.cta .button {
+  margin-left: $small-padding;
+}
+
+@media (max-width: $mobile-threshold) {
+  .cta .button {
+    margin-top: $small-padding;
+  }
 }
