--- a/src/components/product/common.scss
+++ b/src/components/product/common.scss
@@ -13,7 +13,7 @@
 
 .feature .description {
   max-width: 500px;
-  margin: $small-padding $small-padding;
+  margin: 0px $small-padding;
   flex-shrink: 1;
   text-align: justify;
 }
