--- a/src/components/product/helpMe/helpMe.scss
+++ b/src/components/product/helpMe/helpMe.scss
@@ -2,20 +2,16 @@
 
 .help-me {
   align-items: flex-start;
-  padding-top: $small-padding;
 
   .reason {
     max-width: 390px;
     text-align: center;
+    margin: $small-padding 0px;
   }
 
   img {
     width: 80px;
     height: 80px;
-  }
-
-  .description {
-  text-align: justify;
   }
 
 }
