Added techsheet, added social icons, reduced vertical spacing in mobile, added more redirects for social and other stuff

--- a/src/components/product/common.scss
+++ b/src/components/product/common.scss
@@ -65,6 +65,10 @@
     height: auto;
   }
 
+  .feature .column {
+    padding: $small-padding 0px;
+  }
+
   .feature .screenshot-wrapper .navigation.left {
     transform: rotate(90deg);
   }
