--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -20,6 +20,7 @@ $subheader-height: 38px;
 $small-padding: 20px; // How close items can get to the edge.
 $medium-padding: 40px; // Distance between sections (usually a color change)
 $large-padding: 80px;
+$large-mobile-padding: 60px;
 
 
 // Mobile Transition Thresholds
