--- a/src/components/common/footer/footer.scss
+++ b/src/components/common/footer/footer.scss
@@ -14,7 +14,7 @@
 }
 
 .footer .column {
-  flex-basis: 200px;
+  flex-basis: 160px;
 }
 
 .footer .column p {
@@ -59,6 +59,12 @@
 
 .footer-links a:hover {
   color: $voltera-green;
+}
+
+.footer .social-icon {
+  width: 30px;
+  height: 30px;
+  margin-right: 15px;
 }
 
 
