Added privacy policy, added spacing to awards section

--- a/src/components/common/awards/awards.scss
+++ b/src/components/common/awards/awards.scss
@@ -5,6 +5,9 @@ background-color: $white;
 padding: $medium-padding $small-padding;
 }
 
+.awards {
+  padding-top: $small-padding;
+}
 .awards img {
   transition: all $t-time ease-in-out 0s;
   margin-left: 10px;
