Centered footer links. added old terms-of-service redirect

--- a/src/components/common/footer/footer.scss
+++ b/src/components/common/footer/footer.scss
@@ -76,4 +76,8 @@
       padding-top: $small-padding;
     }
   }
+  .footer-links {
+    text-align: center;
+    padding-top: $small-padding;
+  }
 }
