--- a/src/components/faq/faq.scss
+++ b/src/components/faq/faq.scss
@@ -14,64 +14,39 @@
   padding: $medium-padding $small-padding;
 }
 
-.rc-collapse {
+.faq-underline {
+  border-bottom: 1px solid #d9d9d9;
 }
 
-.rc-collapse-anim-active {
-
-}
-.rc-collapse > .rc-collapse-item {
-  border-top: 1px solid #d9d9d9;
-}
-.rc-collapse > .rc-collapse-item:first-child {
-  border-top: none;
-}
-.rc-collapse > .rc-collapse-item > .rc-collapse-header {
+.faq-question-title {
   line-height: 2.3em;
-  text-indent: 1em;
-  color: $voltera-green;
+  color: #79ce00;
   cursor: pointer;
+  user-select: none;
   font-weight: 600;
-}
-.rc-collapse > .rc-collapse-item > .rc-collapse-header .arrow {
-  display: inline-block;
-  content: '\20';
-  width: 0;
-  height: 0;
-  font-size: 0;
-  line-height: 0;
-  border-top: 3px solid transparent;
-  border-bottom: 3px solid transparent;
-  border-left: 4px solid $voltera-green;
-  vertical-align: middle;
-  margin-right: 8px;
-}
-.rc-collapse-content {
-  overflow: hidden;
-  color: $voltera-blue;
-  padding: 0 16px;
-  background-color: #fff;
-  transition: all 0.2s ease-in-out 0s;
-}
-.rc-collapse-content > .rc-collapse-content-box {
-  margin-top: 16px;
-  margin-bottom: 16px;
-}
-.rc-collapse-content-inactive {
-  display: none;
-}
-.rc-collapse-item:last-child > .rc-collapse-content {
-  border-radius: 0 0 3px 3px;
-}
-.rc-collapse > .rc-collapse-item-active > .rc-collapse-header .arrow {
-  border-left: 3px solid transparent;
-  border-right: 3px solid transparent;
-  border-top: 4px solid $voltera-green;
-  margin-right: 6px;
+  margin: 0px;
+
+  i {
+      border: solid $voltera-green;
+      border-width: 0 3px 3px 0;
+      display: inline-block;
+      padding: 3px;
+      margin: 0px 10px 2px 0px;
+  }
+
+  .arrow-right {
+      transform: rotate(-45deg);
+      -webkit-transform: rotate(-45deg);
+  }
+
+  .arrow-down {
+      transform: rotate(45deg);
+      -webkit-transform: rotate(45deg);
+  }
 }
 
 @media (max-width: $mobile-threshold) {
-  .rc-collapse-header {
+  .faq-question-title {
     font-size: 0.9em;
   }
 }
