--- a/src/components/store/store.scss
+++ b/src/components/store/store.scss
@@ -16,7 +16,7 @@
   padding: $medium-padding $small-padding;
 }
 
-.store .product {
+.store-wrapper .product {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
