--- a/src/components/store/collection/productSnippet/productSnippet.scss
+++ b/src/components/store/collection/productSnippet/productSnippet.scss
@@ -5,14 +5,19 @@
   border-radius: 10px;
   margin: $small-padding 10px;
   padding: $small-padding $small-padding;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .product-snippet:hover {
   box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+  text-decoration: none;
 }
 
 .product-snippet .price {
   color: $voltera-green;
+  margin: 0px;
 }
 
 .product-snippet .description {
@@ -20,10 +25,8 @@
   font-size: 0.8em;
 }
 
-.product-snippet a{
-  text-decoration: none;
-}
 .product-snippet img {
-  height: 160px;
-  width: auto;
+  flex-grow: 0;
+  max-width: 240px;
+  max-height: 160px;
 }
