--- a/src/components/product/common.scss
+++ b/src/components/product/common.scss
@@ -60,6 +60,13 @@
   padding: $medium-padding 0px;
 }
 
+.feature .promo {
+  margin: auto;
+  padding-top: $medium-padding;
+  max-width: 800px;
+}
+
+
 @media (max-width: $mobile-threshold) {
   .feature img {
     width: 100%;
