Removed live chat page, reserve now buttons are now request quotes, added landing page that embeds wistia video. Intercom is registering as users and wistia not working in firefox.

--- a/src/components/contact/inTouch/intouch.scss
+++ b/src/components/contact/inTouch/intouch.scss
@@ -1,5 +1,10 @@
 @import 'src/css/colors';
 
+.in-touch {
+  max-width: 1000px;
+  margin: auto;
+}
+
 .in-touch .action {
   max-width: 300px;
   text-align: center;
