Added anchor links to sprinkled faqs, deleted unused files, made buttons inlineblocks

--- a/src/components/common/button/button.scss
+++ b/src/components/common/button/button.scss
@@ -23,7 +23,7 @@
 
 .button {
   cursor: pointer;
-  display: inline;
+  display: inline-block;
   color: $white;
   border-style: solid;
   border-color: $white;
