Store pretty much finished. Need to test in mobile and browsers

--- a/src/components/common/header/mobile.scss
+++ b/src/components/common/header/mobile.scss
@@ -69,6 +69,12 @@
   fill: $voltera-green;
 }
 
+
+.header-mobile .cart-icon {
+  margin-right: 5px;
+}
+
+
 @media (max-width: $mobile-threshold) {
   .header-mobile a {
     font-weight: 300;
