--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -8,6 +8,7 @@ $light-grey: rgb(245,245,245); // Almost white, used for shadows.
 $black: #0f0f0f; // Almost black, used in header / footer
 $medium-grey: rgb(40, 40, 40);//#373737; // dark grey used in mini-hero andsome banners.
 $soft-grey: #848388; // Used in footer
+$divider: rgb(200, 200, 200);
 
 // General Dimensions
 $form-width: 600px;
