--- a/src/components/common/header/desktop.scss
+++ b/src/components/common/header/desktop.scss
@@ -62,21 +62,39 @@
   text-transform: uppercase;
   font-size: 0.8em;
   font-weight: 600;
-}
-.child-header a {
-  margin: 0px 10px;
-  color: $white;
-}
 
-.child-header a:hover {
-  color: $voltera-green;
-  text-decoration: none;
-}
+  a {
+    margin: 0px 10px;
+    color: $white;
+  }
 
-.child-header .selected {
-  color: $voltera-green;
-}
+  a:hover {
+    color: $voltera-green;
+    text-decoration: none;
 
-.child-header .cart-icon {
-  height: 14px;
+    svg g {
+      fill: $voltera-green;
+      transition: all 0.1s ease-in-out 0s;
+    }
+  }
+
+  .selected {
+    color: $voltera-green;
+
+    svg g {
+      fill: $voltera-green;
+      transition: all 0.1s ease-in-out 0s;
+    }
+  }
+
+  .divider {
+      display: inline;
+        border-right-color: white;
+        border-right-width: 1px;
+        border-right-style: solid;
+  }
+
+  .cart-icon {
+    margin-right: 5px;
+  }
 }
