--- a/src/components/store/search/search.scss
+++ b/src/components/store/search/search.scss
@@ -9,3 +9,9 @@
     justify-content: flex-start;
   }
 }
+
+@media (max-width: $mobile-threshold) {
+  .search-wrapper .results-gallery {
+    justify-content: center;
+  }
+}
