--- a/src/components/store/cart/cart.scss
+++ b/src/components/store/cart/cart.scss
@@ -8,6 +8,7 @@
     border-radius: 5px;
     border-style: groove;
     height: 20px;
+    width: 65px;
   }
   .quantity-input:focus {
     outline: none;
