--- a/src/components/store/utils/productSnippet/productSnippet.scss
+++ b/src/components/store/utils/productSnippet/productSnippet.scss
@@ -1,7 +1,7 @@
 @import 'src/css/colors';
 
   .product-snippet {
-    max-width: 230px;
+    width: 230px;
     border-radius: 10px;
     margin: $small-padding 10px;
     padding: $small-padding $small-padding;
