--- a/src/components/common/footer/footer.scss
+++ b/src/components/common/footer/footer.scss
@@ -5,44 +5,52 @@
   width: 100%;
   padding: $medium-padding $small-padding;
   box-sizing: border-box;
+
+  a {
+    color: $soft-grey;
+  }
+
+  a:hover{
+    color: $voltera-green;
+    text-decoration: none;
+  }
 }
 
 .footer {
   max-width: $max-width;
   margin: auto;
   align-items: flex-start;
-}
 
-.footer .column {
-  flex-basis: 200px;
-}
+  ul {
+    list-style: none;
+    padding: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 
-.footer .column p {
-  margin: 0px;
-  color: $white;
-  font-size: 1.2em;
-}
+  li {
+    color: $soft-grey;
+    font-size: 14px;
+    line-height: 1.8em;
+    font-weight: 400;
+  }
 
-.footer .column ul {
-  list-style: none;
-  padding: 0px;
-  margin-top: 10px;
-}
+  p {
+    margin: 0px;
+    color: $white;
+    font-size: 1.2em;
+  }
 
-.footer-wrapper li {
-  color: $soft-grey;
-  font-size: 14px;
-  line-height: 1.8em;
-  font-weight: 400;
-}
+  .social-icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+  }
 
-.footer-wrapper a {
-  color: $soft-grey;
-}
+  .column {
+    flex-basis: 200px;
+  }
 
-.footer-wrapper a:hover{
-  color: $voltera-green;
-  text-decoration: none;
 }
 
 .footer-links {
@@ -53,23 +61,8 @@
   margin: auto;
 }
 
-.footer-links a {
-  color: $soft-grey;
-}
-
-.footer-links a:hover {
-  color: $voltera-green;
-}
-
-.footer .social-icon {
-  width: 30px;
-  height: 30px;
-  margin-right: 15px;
-}
-
-
 @media (max-width: $mobile-threshold) {
-  .footer {
+  .footer{
     justify-content: center;
 
     .column {
