--- a/src/components/common/footer/footer.scss
+++ b/src/components/common/footer/footer.scss
@@ -51,6 +51,27 @@
     flex-basis: 200px;
   }
 
+  .form {
+    margin-top: 10px;
+  }
+
+  .form-email {
+    padding: 5px;
+    display: inline;
+    max-width: 100px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-style: none;
+  }
+  .form-button {
+    display: inline;
+    padding: 5px;
+
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-style: none;
+  }
+
 }
 
 .footer-links {
