just added to cart

--- a/src/components/store/cart/cart.scss
+++ b/src/components/store/cart/cart.scss
@@ -112,4 +112,13 @@
       }
     }
   }
+  .promo {
+    text-align: center;
+    font-size: 1.1em;
+
+    .green {
+      color: $voltera-green
+    }
+  }
+
 }
