--- a/src/components/product/common.scss
+++ b/src/components/product/common.scss
@@ -85,6 +85,11 @@
     height: auto;
   }
 
+  .feature video {
+    width: 100%;
+    height: auto;
+  }
+
   .feature .column {
     padding: $small-padding 0px;
   }
